<resources>
    <string name="app_name">A2</string>
    <string name="nav_game">Play</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_scores">High Scores</string>

    <string name="title_settings">Settings</string>
    <string name="title_high_scores">High Scores</string>

    <string name="big_number_button">Big Number</string>
    <string name="small_number_button">Small Number</string>
    <string name="default_value">0</string>

    <string name="text_current_total">Current Total:</string>
    <string name="button_text_subtraction">-</string>
    <string name="button_text_addition">+</string>
    <string name="button_text_multiplication">*</string>
    <string name="button_text_division">/</string>

    <string name="txt_date_time">Date/Time</string>
    <string name="txt_score">Score</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_clear_highscores">Clear Highscores</string>
    <string name="text_level">Level</string>
    <string name="timer_length">Timer Length</string>
    <string name="goal_range">Goal Range</string>
    <string name="level_1">Level 1</string>
    <string name="_120">120</string>
    <string name="_100_500">100 – 500</string>
    <string name="level_2">Level 2</string>
    <string name="_60">60</string>
    <string name="_500_1000">500 – 1000</string>
    <string name="level_3">Level 3</string>
    <string name="_30">30</string>
    <string name="_1000_2000">1000 – 2000</string>
    <string name="level">Level</string>
    <string name="instructions">Instructions</string>
    <string name="viewing_highscore_level">Viewing Level:</string>
    <string name="instructions_1">Like the TV show, Countdown, the aim of the game is to get as close to the goal number as possible.</string>
    <string name="instructions_2">Starting the game, you must select 7 numbers to start with. The two buttons Big Number and Small Number will generate an appropriate number.</string>
    <string name="instructions_3">You earn points by getting as close to the goal number as you can, within the time limit.</string>
    <string name="instructions_4">You can shake the device to randomly select the remaining big/small numbers.</string>
    <string name="instructions_5">On the highscores tab, you can select which highscore you are viewing by swiping to the lext and to the right.</string>
    <string name="instructions_6">The settings tab contains options to change the difficulty of the game, clear your phones local database of any previous highscores and you can view these instructions at any time.</string>

</resources>
